Fix image not covering in mobile

--- a/css/isthis.css
+++ b/css/isthis.css
@@ -175,7 +175,7 @@ footer p {
 
   canvas {
     background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash-mob.jpg");
-    background-size: 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
 
@@ -197,7 +197,7 @@ footer p {
 
   canvas {
     background-image: url("../img/daniel-menakhovsky-zqyk7S_FoGA-unsplash-mob.jpg");
-    background-size: 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
 
